add script to build image locally

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 services:
   marzban-node:
-    # build: .
-    image: gozargah/marzban-node:latest
+    build: .
+    # image: gozargah/marzban-node:latest
     restart: always
     network_mode: host
 
     environment:
-      SSL_CERT_FILE: "/var/lib/marzban-node/ssl_cert.pem"
-      SSL_KEY_FILE: "/var/lib/marzban-node/ssl_key.pem"
+      SSL_CERT_FILE: "./cert/ssl_cert.pem"
+      SSL_KEY_FILE: "./cert/ssl_key.pem"
       # SSL_CLIENT_CERT_FILE: "/var/lib/marzban-node/ssl_client_cert.pem"
 
     volumes:
-      - /var/lib/marzban-node:/var/lib/marzban-node
+      - ./cert:/var/lib/marzban-node
