--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -5,30 +5,36 @@ server {
 
     ssl_certificate /var/lib/marzban-node/ssl_cert.pem;
     ssl_certificate_key /var/lib/marzban-node/ssl_key.pem;
-    location ~* /(dashboard|api|docs|redoc|openapi.json) {
-        proxy_pass http://0.0.0.0:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
 
-    # xray-core ws-path: /
-    # client ws-path: /marzban/me/2087
-    #
-    # All traffic is proxed through port 443, and send to the xray port(2087, 2088 etc.).
-    # The '/marzban' in location regex path can changed any characters by yourself.
-    #
-    # /${path}/${username}/${xray-port}
-    location ~* /marzban/.+/(.+)$ {
-        proxy_redirect off;
-        proxy_pass http://127.0.0.1:$1/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
+    client_header_timeout 52w;
+    keepalive_timeout 52w;
+    location /drop2_me_grpc_service {
+                if ($content_type !~ "application/grpc") {
+                        return 404;
+                }
+                client_max_body_size 0;
+                client_body_buffer_size 512k;
+                grpc_set_header X-Real-IP $remote_addr;
+                client_body_timeout 52w;
+                grpc_read_timeout 52w;
+                grpc_pass grpc://127.0.0.1:27888;
+        }
+
+    location /drop2_me_ws_service {
+                if ($http_upgrade != "websocket") {
+                        return 404;
+                }
+                proxy_pass http://127.0.0.1:27889;
+                proxy_redirect off;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_read_timeout 52w;
+        }
+
 
     location / {
         proxy_pass http://0.0.0.0:5000;
